formats past talks and shows with better meta, renamed css, better design intro

--- a/about/index.html
+++ b/about/index.html
@@ -11,10 +11,10 @@
 	<meta name="p:domain_verify" content="766c1df40cfdc1ba812d5b2668f45ede">
 	<meta name="p:domain_verify" content="89bcb4858abdc44a2d4c6a4c223f34d8"/>
 
-	<link rel="stylesheet" href="/css/screen.css">
+	<link rel="stylesheet" href="../css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
-<title>Susan &times; About</title>
+	<title>Susan &times; About</title>
 
 </head>
 
@@ -24,44 +24,44 @@
 
 		<header>
 
-	<a href="/" class="mobile-logo">
-		<img src="/images/bysusanlin.svg" height="60px">
-	</a>
+			<a href="/" class="mobile-logo">
+				<img src="/images/bysusanlin.svg" height="60px">
+			</a>
 
-  <ul>
-		<a href="/about">
-      <li>
-        About
-      </li>
-    </a>
-    <a href="/design">
-      <li>
-        Design
-      </li>
-    </a>
-    <a href="/illustration">
-      <li>
-        Illustration
-      </li>
-    </a>
-    <a href="/sketchnotes">
-      <li>
-        Sketchnotes
-      </li>
-    </a>
-    <a href="/talks">
-      <li>
-        Talks
-      </li>
-    </a>
-    <a href="http://shop.bysusanlin.com">
-      <li>
-        Shop
-      </li>
-    </a>
-  </ul>
+		  <ul>
+				<a href="/about">
+		      <li>
+		        About
+		      </li>
+		    </a>
+		    <a href="/design">
+		      <li>
+		        Design
+		      </li>
+		    </a>
+		    <a href="/illustration">
+		      <li>
+		        Illustration
+		      </li>
+		    </a>
+		    <a href="/sketchnotes">
+		      <li>
+		        Sketchnotes
+		      </li>
+		    </a>
+		    <a href="/talks">
+		      <li>
+		        Talks
+		      </li>
+		    </a>
+		    <a href="http://shop.bysusanlin.com">
+		      <li>
+		        Shop
+		      </li>
+		    </a>
+		  </ul>
 
-</header>
+		</header>
 
 		<div class="intro">
 
@@ -114,30 +114,39 @@
         Art Shows &amp; Engagements: <br>
         <ul>
           <li>
-            <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">The James Webb Space Telescope: Art + Science at NASA Goddard</a> &mdash;
-              Greenbelt, MD. <span class="typeNums">3/3/17-Now</span>
+            <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">The James Webb Space Telescope: Art + Science</a>
+						<br>
+          	<span class="metaText">NASA Goddard Space Flight Center, Greenbelt, MD. 3/3/17-Now.</span>
           </li>
           <li>
-            <a href="http://thegalallery.com/love-is">Love Is: Benefit Art Show at The Galallery</a> &mdash;
-              San Francisco, CA. <span class="typeNums">2/18/17-3/26/17</span>
+            <a href="http://thegalallery.com/love-is">Love Is: Benefit Art Show</a>
+						<br>
+          	<span class="metaText">The Galallery, San Francisco, CA. 2/18/17-3/26/17.</span>
           </li>
           <li>
-            <a href="http://moonprismpower.net/">Moon Prism Power: Sailor Moon Art Show at The Galallery</a> &mdash;
-              San Francisco, CA. <span class="typeNums">12/9/15-01/29/17</span>
+            <a href="http://moonprismpower.net/">Moon Prism Power: Sailor Moon Art Show</a>
+						<br>
+          	<span class="metaText">The Galallery, San Francisco, CA. 12/9/15-01/29/17.</span>
           </li>
           <li>
-            <a href="https://www.facebook.com/teaspoonsanfrancisco/">Art on display at Teaspoon SF</a> &mdash;
-              San Francisco, CA. <span class="typeNums">Now</span>
+            <a href="https://www.facebook.com/teaspoonsanfrancisco/">Watercolor paintings installation</a>
+						<br>
+          	<span class="metaText">Teaspoon, San Francisco, CA. Now.</span>
           </li>
           <li>
-            <a href="http://www.behindthemuseumcafe.com/gallery.html">Show at Behind the Museum Cafe</a> &mdash;
-              Portland, OR. <span class="typeNums">3/1/16-4/30/16</span>
+            <a href="http://www.behindthemuseumcafe.com/gallery.html">Solo Show: Watercolor Trees</a>
+						<br>
+          	<span class="metaText">Behind the Museum Cafe, Portland, OR. 3/1/16-4/30/16.</span>
           </li>
           <li>
-            <a href="https://www.facebook.com/events/1580301958953195/?active_tab=posts">Group Show at Coffee Shop</a> &mdash; Walnut Creek, CA. <span class="typeNums">4/7/16</span>
+            <a href="https://www.facebook.com/events/1580301958953195/?active_tab=posts">Group Show: Art Night</a>
+						<br>
+						<span class="metaText">Coffee Shop, Walnut Creek, CA. 4/7/16.</span>
           </li>
           <li>
-            <a href="http://www.alternativepressexpo.com/">Booth at Alternative Press Expo</a> &mdash; San Jose, CA. <span class="typeNums">10/3/15-10/4/15</span>
+            <a href="http://www.alternativepressexpo.com/">Table Booth</a>
+						<br>
+						<span class="metaText">Alternative Press Expo, San Jose, CA. 10/3/15-10/4/15.</span>
           </li>
         </ul>
       </p>
