--- a/design/index.html
+++ b/design/index.html
@@ -11,7 +11,7 @@
 	<meta name="p:domain_verify" content="766c1df40cfdc1ba812d5b2668f45ede">
 	<meta name="p:domain_verify" content="89bcb4858abdc44a2d4c6a4c223f34d8"/>
 
-	<link rel="stylesheet" href="/css/screen.css">
+	<link rel="stylesheet" href="../css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
 	<title>Susan &times; Design</title>
@@ -24,49 +24,53 @@
 
 		<header>
 
-	<a href="/" class="mobile-logo">
-		<img src="/images/bysusanlin.svg" height="60px">
-	</a>
+			<a href="/" class="mobile-logo">
+				<img src="/images/bysusanlin.svg" height="60px">
+			</a>
 
-  <ul>
-		<a href="/about">
-      <li>
-        About
-      </li>
-    </a>
-    <a href="/design">
-      <li>
-        Design
-      </li>
-    </a>
-    <a href="/illustration">
-      <li>
-        Illustration
-      </li>
-    </a>
-    <a href="/sketchnotes">
-      <li>
-        Sketchnotes
-      </li>
-    </a>
-    <a href="/talks">
-      <li>
-        Talks
-      </li>
-    </a>
-    <a href="http://shop.bysusanlin.com">
-      <li>
-        Shop
-      </li>
-    </a>
-  </ul>
+		  <ul>
+				<a href="/about">
+		      <li>
+		        About
+		      </li>
+		    </a>
+		    <a href="/design">
+		      <li>
+		        Design
+		      </li>
+		    </a>
+		    <a href="/illustration">
+		      <li>
+		        Illustration
+		      </li>
+		    </a>
+		    <a href="/sketchnotes">
+		      <li>
+		        Sketchnotes
+		      </li>
+		    </a>
+		    <a href="/talks">
+		      <li>
+		        Talks
+		      </li>
+		    </a>
+		    <a href="http://shop.bysusanlin.com">
+		      <li>
+		        Shop
+		      </li>
+		    </a>
+		  </ul>
 
-</header>
+		</header>
 
 		<div class="intro">
-			<h2> Product Design </h2>
+			<h2> Design </h2>
 			<p>
-				I am a Senior level Product Designer with 7 years of experience. This is a selected history of work serving as a brief overview. I have designed across platforms and especially feel at home on the web. My core contributions are UX flows, experience maps, UI finesse, prototypes, seeing a design to ship, and owning the post-shipping follow-up on the UX. As a bonus, I can also write production worthy HTML and CSS/Sass as well as illustrate clean vector imagery.
+				I am a Senior level Product Designer with 7 years of experience. This is a selected history of work serving as an overview.
+				<br><br>
+				I have designed across platforms and especially feel at home on the web. My core contributions are user flows, experience maps, UI finesse, prototypes, seeing a design to ship, and owning the post-shipping follow-up for the UX. I have created and maintained Design Systems for both small and large teams in collaboration with fellow designers and engineers. I can write production worthy HTML and CSS/Sass as well as illustrate clean visual imagery. My contributions have shown demonstrable returns on investment.
+		 		<br><br>
+				Additionally, I am an active member of the global creative community. I have spent the past few years traveling far and often to create <a href="/sketchnotes">sketchnotes</a>, give <a href="/talks">talks</a>, and show my artwork.
 		 		<br><br>
         <a href="/SusanLin-resume.pdf">View PDF resume.</a>
 			</p>
