--- a/talks/index.html
+++ b/talks/index.html
@@ -11,7 +11,7 @@
 	<meta name="p:domain_verify" content="766c1df40cfdc1ba812d5b2668f45ede">
 	<meta name="p:domain_verify" content="89bcb4858abdc44a2d4c6a4c223f34d8"/>
 
-	<link rel="stylesheet" href="/css/screen.css">
+	<link rel="stylesheet" href="../css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
 	<title>Susan &times; Talks</title>
@@ -24,44 +24,44 @@
 
 		<header>
 
-	<a href="/" class="mobile-logo">
-		<img src="/images/bysusanlin.svg" height="60px">
-	</a>
+			<a href="/" class="mobile-logo">
+				<img src="/images/bysusanlin.svg" height="60px">
+			</a>
 
-  <ul>
-		<a href="/about">
-      <li>
-        About
-      </li>
-    </a>
-    <a href="/design">
-      <li>
-        Design
-      </li>
-    </a>
-    <a href="/illustration">
-      <li>
-        Illustration
-      </li>
-    </a>
-    <a href="/sketchnotes">
-      <li>
-        Sketchnotes
-      </li>
-    </a>
-    <a href="/talks">
-      <li>
-        Talks
-      </li>
-    </a>
-    <a href="http://shop.bysusanlin.com">
-      <li>
-        Shop
-      </li>
-    </a>
-  </ul>
+		  <ul>
+				<a href="/about">
+		      <li>
+		        About
+		      </li>
+		    </a>
+		    <a href="/design">
+		      <li>
+		        Design
+		      </li>
+		    </a>
+		    <a href="/illustration">
+		      <li>
+		        Illustration
+		      </li>
+		    </a>
+		    <a href="/sketchnotes">
+		      <li>
+		        Sketchnotes
+		      </li>
+		    </a>
+		    <a href="/talks">
+		      <li>
+		        Talks
+		      </li>
+		    </a>
+		    <a href="http://shop.bysusanlin.com">
+		      <li>
+		        Shop
+		      </li>
+		    </a>
+		  </ul>
 
-</header>
+		</header>
 
 		<div class="intro">
 
@@ -75,26 +75,59 @@
       <p>
         Open for talk inquiries! bysusanlin at gmail.
 			</p>
+
       <br>
 
 			<p>
-				Past Talks: <br>
+				Past Talks:<br>
 			<ul>
-				<li> The Galallery &mdash; <a href="https://www.facebook.com/events/1234536963304621/">Moon Prism Power: Sailor Moon Panel</a> </li>
+				<li>
+					<a href="https://www.facebook.com/events/1234536963304621/">Moon Prism Power: Sailor Moon Panel</a>
+					<br>
+					<span class="metaText">The Galallery, San Francisco, CA. January 2017.</span>
+				</li>
+				<li>
+					<a href="https://www.eventbrite.com/e/the-junction-prague-tickets-26112567392 ">Full STEAM Ahead</a> | <a href="https://www.youtube.com/watch?v=kY6lv7WsPSM">Video</a>
+					<br>
+					<span class="metaText">The Junction, Prague, Czech Republic. June 2016.</span>
+				</li>
 
-				<li> The Junction &mdash; <a href="https://www.eventbrite.com/e/the-junction-prague-tickets-26112567392 ">Full STEAM Ahead</a> | <a href="https://www.youtube.com/watch?v=kY6lv7WsPSM">Video</a> </li>
+				<li>
+					<a href="https://ti.to/wafflejs/august">No Wasted Paint</a> | <a href="http://sketch.bysusanlin.com/post/126377952333/no-wasted-paint">Write-up</a>
+					<br>
+					<span class="metaText">WaffleJS, San Francisco, CA. August 2015.</span>
+				</li>
 
-				<li> WaffleJS &mdash; <a href="https://ti.to/wafflejs/august">No Wasted Paint</a> | <a href="http://sketch.bysusanlin.com/post/126377952333/no-wasted-paint">Write-up</a> </li>
+				<li>
+					<a href="http://padlet.com/norisjavier/designtalk">#DesignTalk</a>
+					<br>
+					<span class="metaText">A virtual panel on Twitter. July 2014.</span>
+				</li>
 
-				<li> IXDA SF &mdash; <a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a> | <a href="#speaking-the-code">Video</a> </li>
+				<li>
+					<a href="http://www.eventbrite.com/e/taco-tuesdays-a-product-design-talk-series-hosted-by-thoughtbot-tickets-11179142115">Process is Ugly</a>
+					<br>
+					<span class="metaText">Thoughtbot Product Design Talks, San Francisco, CA. April 2014.</span>
+				</li>
 
-				<li> Thoughtbot Product Design Talks &mdash; <a href="http://www.eventbrite.com/e/taco-tuesdays-a-product-design-talk-series-hosted-by-thoughtbot-tickets-11179142115"> Process is Ugly</a> </li>
+				<li>
+					<a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a> | <a href="#speaking-the-code">Video</a>
+					<br>
+					<span class="metaText">IxDA, San Francisco, CA. August 2013</span>
+				</li>
 
-				<li> Carnegie Mellon University &mdash; <a href="http://sketch.bysusanlin.com/post/45977847470/speaking-with-the-cmu-bxa-panel"> BXA alumni panel</a> </li>
+				<li>
+					<a href="http://sketch.bysusanlin.com/post/45977847470/speaking-with-the-cmu-bxa-panel"> BXA alumni panel</a>
+					<br>
+					<span class="metaText">Carnegie Mellon University, Pittsburgh, PA. March 2013</span>
+				</li>
 
-				<li> Academy of Arts &mdash; Guest Lecture for Visual Design Studio </li>
+				<li>
+					Guest Lecture for Visual Design Studio
+					<br>
+					<span class="metaText">Academy of Arts, San Francisco, CA. November 2012.</span>
+				</li>
 
-				<li> #DesignTalk &mdash; <a href="http://padlet.com/norisjavier/designtalk"> Virtual panel on Twitter</a> </li>
 			</ul>
 			</p>
 
@@ -119,7 +152,7 @@
 
 			<h2> Speaking the Code </h2>
 			<p>
-				Recording of my talk for IXDA SF. I spoke about working with engineers using Trulia's component library.
+				Recording of my talk for Interaction Designers Association SF's Design Doing meet-up. I spoke about collaborating with engineers using Trulia's design system.
 				<br><br>
 				<a href="https://speakerdeck.com/susan/design-doing-speaking-the-code">Slides on SpeakerDeck.</a>
 			</p>
