--- a/design/index.html
+++ b/design/index.html
@@ -66,11 +66,11 @@
 		<div class="intro">
 			<h2> Design </h2>
 			<p>
-				I am a Senior level Product Designer with 7 years of experience. This is a selected history of work serving as an overview.
+				I am a Senior level Product Designer with 7 years of experience and a graduate MHCI degree from CMU. This is a selected history of work.
 				<br><br>
 				I have designed across platforms and especially feel at home on the web. My core contributions are user flows, experience maps, UI finesse, prototypes, seeing a design to ship, and owning the post-shipping follow-up for the UX. I have created and maintained Design Systems for both small and large teams in collaboration with fellow designers and engineers. I can write production worthy HTML and CSS/Sass as well as illustrate clean visual imagery. My contributions have shown demonstrable returns on investment.
 		 		<br><br>
-				Additionally, I am an active member of the global creative community. I have spent the past few years traveling far and often to create <a href="/sketchnotes">sketchnotes</a>, give <a href="/talks">talks</a>, and show my artwork.
+				Additionally, I am an active member of the global creative community. I have spent the past few years traveling far and often to create <a href="/sketchnotes">sketchnotes</a>, give <a href="/talks">talks</a>, and show <a href="/about#art-shows">artwork.</a>
 		 		<br><br>
         <a href="/SusanLin-resume.pdf">View PDF resume.</a>
 			</p>
