--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -11,7 +11,7 @@
 	<meta name="p:domain_verify" content="766c1df40cfdc1ba812d5b2668f45ede">
 	<meta name="p:domain_verify" content="89bcb4858abdc44a2d4c6a4c223f34d8"/>
 
-	<link rel="stylesheet" href="/css/screen.css">
+	<link rel="stylesheet" href="../css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
 <title>Susan &times; Sketchnotes</title>
@@ -68,7 +68,7 @@
 			<h2> Sketchnotes </h2>
 
 			<p>
-				I create large watercolor painted notes. I can effectively sketch topics in user experience and design, front-end engineering, and diversity plus inclusion. I've previously been hired to sketch <a href="https://alterconf.com/conferences">AlterConf</a>, <a href="http://clarityconf.com">Clarity</a>, and <a href="https://smashingconf.com/">Smashing Conf</a>. I offer the notes to speakers as gifts at the conclusion of the event. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">Check out the archive of sketchnotes.</a>
+				I create large watercolor painted notes. I can effectively sketch topics in user experience and design, front-end engineering, and diversity plus inclusion. I've previously been hired to sketch <a href="https://alterconf.com/conferences">AlterConf</a> twice, <a href="http://clarityconf.com">Clarity</a>, and <a href="https://smashingconf.com/">Smashing Conf.</a> I offer the notes to speakers as gifts at the conclusion of the event. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">Check out the archive of sketchnotes.</a>
 			</p>
       <p>
         Open for sketchnote inquiries! Including conferences, events, and scoped branding projects. bysusanlin at gmail.
@@ -100,13 +100,13 @@
 						You may promote your event with an official sketchnoter.
 					</li>
 					<li>
-						I draw in realtime. Sketchnotes are shared while the conference is happening. I finish and share when each speaker wraps up.
+						I draw in realtime. Sketchnotes are shared while the conference is happening. I finish and share while each speaker wraps up.
 					</li>
 					<li>
 						I will cross-promote from my personal accounts before, during, and after the event.
 					</li>
 					<li>
-						You will receive high-resolution sketchnotes images and a PDF deck to share for present and future events.
+						You will receive high-resolution sketchnotes images and a PDF deck.
 					</li>
 					<li>
             Sketchnotes are offered to speakers at the end of the event as gifts.
@@ -135,6 +135,9 @@
 
 				Featured around the web:
 				<li>
+          The Pen Addict Podcast (Shoutout) &mdash; <a href="https://overcast.fm/+CGRvTfoiQ/27:45">239: Previously Inksploded</a>
+				</li>
+				<li>
 					Clarity 2016 &mdash; <a href="https://www.clarityconf.com/2016/">Sketchnoter and Schedule</a>
 				</li>
 				<li>
@@ -157,9 +160,6 @@
 				</li>
 				<li>
           Sketchnote Army &mdash; <a href="http://sketchnotearmy.com/blog/2014/6/25/cssconf-sketchnote-susan-lin.html">CSSconf 2014</a> & <a href="http://sketchnotearmy.com/blog/2013/4/2/interaction-2013-sketchnotes.html">Interaction 2013</a>
-				</li>
-				<li>
-          The Pen Addict Podcast &mdash; <a href="https://overcast.fm/+CGRvTfoiQ/27:45">239: Previously Inksploded Shoutout</a>
 				</li>
 		</div>
 
@@ -193,7 +193,7 @@
       <h2> Favorite Sketchnotes </h2>
 
       <p>
-         Featured above were some of my favorite sketchnotes across different topics. You can see <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">the full archive</a> on my sketchnotes subsite.
+         Featured above were some of my favorite sketchnotes across different topics. You can see <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">the full archive</a> on my blog.
       </p>
 
    </div>
