add design play online piece, remove local testing stuff

--- a/talks/index.html
+++ b/talks/index.html
@@ -11,7 +11,7 @@
 	<meta name="p:domain_verify" content="766c1df40cfdc1ba812d5b2668f45ede">
 	<meta name="p:domain_verify" content="89bcb4858abdc44a2d4c6a4c223f34d8"/>
 
-	<link rel="stylesheet" href="../css/screen.css">
+	<link rel="stylesheet" href="/css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
 	<title>Susan &times; Talks</title>
