--- a/about/index.html
+++ b/about/index.html
@@ -135,12 +135,12 @@
           	<span class="metaText">Teaspoon, San Francisco, CA. Now.</span>
           </li>
           <li>
-            <a href="http://www.behindthemuseumcafe.com/gallery.html">Solo Show: Watercolor Trees</a>
+            <a href="http://www.behindthemuseumcafe.com/gallery.html">Watercolor Trees: Solo Show</a>
 						<br>
           	<span class="metaText">Behind the Museum Cafe, Portland, OR. 3/1/16-4/30/16.</span>
           </li>
           <li>
-            <a href="https://www.facebook.com/events/1580301958953195/?active_tab=posts">Group Show: Art Night</a>
+            <a href="https://www.facebook.com/events/1580301958953195/?active_tab=posts">Art Night: Group Show</a>
 						<br>
 						<span class="metaText">Coffee Shop, Walnut Creek, CA. 4/7/16.</span>
           </li>
