--- a/talks/index.html
+++ b/talks/index.html
@@ -70,7 +70,7 @@
 			</h2>
 
 			<p>
-				I am a prolific creator and I enjoy speaking about my work and process. I would love to speak more about design systems, combining visual and techincal skills, and self care.
+				I am a prolific creator and I enjoy speaking about my work and process. I would love to speak more about design systems, combining visual and technical skills, and self care.
 			</p>
       <p>
         Open for talk inquiries! bysusanlin at gmail.
