remove dead link and format consistency

--- a/talks/index.html
+++ b/talks/index.html
@@ -79,6 +79,11 @@
       <br>
 
 			<p>
+				<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">&quot;Everything you are passionate about is worth pursuing. The dots will connect.&quot; -<a href="https://twitter.com/bysusanlin">@bysusanlin</a> <a href="https://twitter.com/wafflejs">@wafflejs</a> <a href="http://t.co/UxVblcCxDM">pic.twitter.com/UxVblcCxDM</a></p>&mdash; Pawel 🐾🔔🍤🐥☕️🎿 (@makenai) <a href="https://twitter.com/makenai/status/629124757795926016">August 6, 2015</a></blockquote>
+				<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</p>
+
+			<p>
 				Past Talks:<br>
 			<ul>
 				<li>
@@ -113,13 +118,13 @@
 				<li>
 					<a href="http://ixdasf.ning.com/events/designdoing">Speaking the Code</a> | <a href="#speaking-the-code">Video</a>
 					<br>
-					<span class="metaText">IxDA, San Francisco, CA. August 2013</span>
+					<span class="metaText">IxDA, San Francisco, CA. August 2013.</span>
 				</li>
 
 				<li>
 					<a href="http://sketch.bysusanlin.com/post/45977847470/speaking-with-the-cmu-bxa-panel"> BXA alumni panel</a>
 					<br>
-					<span class="metaText">Carnegie Mellon University, Pittsburgh, PA. March 2013</span>
+					<span class="metaText">Carnegie Mellon University, Pittsburgh, PA. March 2013.</span>
 				</li>
 
 				<li>
@@ -130,11 +135,6 @@
 
 			</ul>
 			</p>
-
-      <p>
-        <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">&quot;Everything you are passionate about is worth pursuing. The dots will connect.&quot; -<a href="https://twitter.com/bysusanlin">@bysusanlin</a> <a href="https://twitter.com/wafflejs">@wafflejs</a> <a href="http://t.co/UxVblcCxDM">pic.twitter.com/UxVblcCxDM</a></p>&mdash; Pawel 🐾🔔🍤🐥☕️🎿 (@makenai) <a href="https://twitter.com/makenai/status/629124757795926016">August 6, 2015</a></blockquote>
-        <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-      </p>
 
 		</div>
 
