removes prev commit and adds title

--- a/trulia/index.html
+++ b/trulia/index.html
@@ -1,20 +1,4 @@
-<!doctype html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-
-	<meta name="viewport" content="width=device-width">
-
-	<meta name="description" content="Susan is a Product Designer and Artist. She also writes CSS, enjoys pixel art, and gets paid to sketchnote. Support her passion projects: http://shop.bysusanlin.com">
-	<meta name="author" content="Susan Lin, Susan L., Susan, bysusanlin, @bysusanlin">
-
-	<meta name="p:domain_verify" content="766c1df40cfdc1ba812d5b2668f45ede">
-	<meta name="p:domain_verify" content="89bcb4858abdc44a2d4c6a4c223f34d8"/>
-
-	<link rel="stylesheet" href="/css/screen.css">
-	<link rel="SHORTCUT ICON" href="/favicon.ico">
-
-	<title>Susan &times; Trulia</title>
+<html>
 
 <script type="text/javascript">
 
@@ -27,7 +11,6 @@ function detectBrowser()
 }
 
 </script>
-</head>
 
 <body bgcolor="black" onload="detectBrowser()">
 </body>
