replace blog with direct writing link

--- a/about/index.html
+++ b/about/index.html
@@ -153,7 +153,7 @@
 
       <p>
 				Elsewhere on the internet: <br>
-				<a href="http://sketch.bysusanlin.com">Blog</a> |
+				<a href="http://sketch.bysusanlin.com/tagged/writing">Writing</a> |
 				<a href="http://instagram.com/susanl">Instagram</a> |
 				<a href="http://twitter.com/bysusanlin">Twitter</a> |
 				<a href="http://pinterest.com/susanl/pins">Pinterest</a> |
@@ -262,9 +262,9 @@
 				</li>
 			</a>
 
-			<a href="http://sketch.bysusanlin.com">
+			<a href="http://sketch.bysusanlin.com/tagged/writing">
 				<li>
-					Blog
+					Writing
 				</li>
 			</a>
 
