--- a/illustration/index.html
+++ b/illustration/index.html
@@ -244,9 +244,9 @@
 				</li>
 			</a>
 
-			<a href="http://sketch.bysusanlin.com">
+			<a href="http://sketch.bysusanlin.com/tagged/writing">
 				<li>
-					Blog
+					Writing
 				</li>
 			</a>
 
