--- a/design/index.html
+++ b/design/index.html
@@ -298,9 +298,9 @@
 				</li>
 			</a>
 
-			<a href="http://sketch.bysusanlin.com">
+			<a href="http://sketch.bysusanlin.com/tagged/writing">
 				<li>
-					Blog
+					Writing
 				</li>
 			</a>
 
