--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
 				</li>
 			</a>
 
-			<a href="http://sketch.bysusanlin.com">
+			<a href="http://sketch.bysusanlin.com/tagged/writing">
 				<li>
-					Blog
+					Writing
 				</li>
 			</a>
 
