sky image cleanup

--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="/css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
-	<title>Susan &times; About</title>
+<title>Susan &times; About</title>
 
 </head>
 
@@ -24,44 +24,44 @@
 
 		<header>
 
-			<a href="/" class="mobile-logo">
-				<img src="/images/bysusanlin.svg" height="60px">
-			</a>
+	<a href="/" class="mobile-logo">
+		<img src="/images/bysusanlin.svg" height="60px">
+	</a>
 
-		  <ul>
-				<a href="/about">
-		      <li>
-		        About
-		      </li>
-		    </a>
-		    <a href="/design">
-		      <li>
-		        Design
-		      </li>
-		    </a>
-		    <a href="/illustration">
-		      <li>
-		        Illustration
-		      </li>
-		    </a>
-		    <a href="/sketchnotes">
-		      <li>
-		        Sketchnotes
-		      </li>
-		    </a>
-		    <a href="/talks">
-		      <li>
-		        Talks
-		      </li>
-		    </a>
-		    <a href="http://shop.bysusanlin.com">
-		      <li>
-		        Shop
-		      </li>
-		    </a>
-		  </ul>
+  <ul>
+		<a href="/about">
+      <li>
+        About
+      </li>
+    </a>
+    <a href="/design">
+      <li>
+        Design
+      </li>
+    </a>
+    <a href="/illustration">
+      <li>
+        Illustration
+      </li>
+    </a>
+    <a href="/sketchnotes">
+      <li>
+        Sketchnotes
+      </li>
+    </a>
+    <a href="/talks">
+      <li>
+        Talks
+      </li>
+    </a>
+    <a href="http://shop.bysusanlin.com">
+      <li>
+        Shop
+      </li>
+    </a>
+  </ul>
 
-		</header>
+</header>
 
 		<div class="intro">
 
@@ -70,15 +70,15 @@
 			</h2>
 
 			<p>
-				Hello World! Susan Lin is a Senior Product Designer who can write front-end code and illustrate. She is also an artist, primarily painting in watercolor and making pixel art.
+				Hello World! Susan Lin is a designer. She is also an artist, primarily painting in watercolor and making pixel art.
       </p>
 
       <p>
-				She currently designs at Automattic. Previously, she <a href="/talks">built and maintained design systems</a>, in addition to user experiences, with Treehouse, OpenTable, Blippy, Beyond Pricing, and Trulia. She studied at Carnegie Mellon University and holds a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">Masters of HCI</a> and interdisciplinary <a href="https://www.cmu.edu/interdisciplinary/programs/">BXA degree</a>. She believes the best technology designers are able to understand code and push their own pixels. Her design ethos is to approach each solution as part of a living system which scales beyond the immediate feature.
+				She currently designs at <a href="http://navahq.com">Nava.</a> Previously, she <a href="/talks">built and maintained design systems</a>, in addition to user experiences, with Automattic, Treehouse, OpenTable, Blippy, Beyond Pricing, and Trulia. She studied at Carnegie Mellon University and holds a <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">Masters of HCI</a> and interdisciplinary <a href="https://www.cmu.edu/interdisciplinary/programs/">BXA degree</a>. She believes the best technology designers are able to understand code and push their own pixels. Her design ethos is to approach each solution as part of a living system which scales beyond the immediate feature.
       </p>
 
       <p>
-				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees</a> and <a href="https://www.instagram.com/explore/tags/susansmovingstudio/">made art while she traveled.</a> Most recently, she indulges in <a href="https://www.instagram.com/explore/tags/pixelsbysusan/">pixel art.</a> She believes deliberate practice is the key to a successful art practice and has shown her work in several cities.
+				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees</a> and <a href="https://www.instagram.com/explore/tags/susansmovingstudio/">made art while she traveled.</a> Most recently, she indulges in <a href="https://www.instagram.com/explore/tags/pixelsbysusan/">pixel art.</a> She believes delibrate practice is the key to a successful art practice and has shown her work in several cities.
       </p>
 
       <p>
@@ -102,49 +102,42 @@
           <li>
             <a href="https://usesthis.com/interviews/susan.lin">The Set-up</a> &mdash; What do people use to get stuff done?
           </li>
+          <li>
+            <a href="http://betwixt.is/delighted-by/designer-miniviews-susan-lin">Betwixt Mini-interview</a> &mdash; Interview with Susan Lin
+          </li>
         </ul>
       </p>
 
       <br>
 
       <p>
-				<a name="art-shows"></a>
         Art Shows &amp; Engagements: <br>
         <ul>
           <li>
-            <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">The James Webb Space Telescope: Art + Science</a>
-						<br>
-          	<span class="metaText">NASA Goddard Space Flight Center, Greenbelt, MD. 3/3/17-Now.</span>
+            <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">The James Webb Space Telescope: Art + Science at NASA Goddard</a> &mdash;
+              Greenbelt, MD. <span class="typeNums">3/3/17-7/2/17</span>
           </li>
           <li>
-            <a href="http://thegalallery.com/love-is">Love Is: Benefit Art Show</a>
-						<br>
-          	<span class="metaText">The Galallery, San Francisco, CA. 2/18/17-3/26/17.</span>
+            <a href="http://thegalallery.com/love-is">Love Is: Benefit Art Show at The Galallery</a> &mdash;
+              San Francisco, CA. <span class="typeNums">2/18/17-3/26/17</span>
           </li>
           <li>
-            <a href="http://moonprismpower.net/">Moon Prism Power: Sailor Moon Art Show</a>
-						<br>
-          	<span class="metaText">The Galallery, San Francisco, CA. 12/9/15-01/29/17.</span>
+            <a href="http://moonprismpower.net/">Moon Prism Power: Sailor Moon Art Show at The Galallery</a> &mdash;
+              San Francisco, CA. <span class="typeNums">12/9/15-01/29/17</span>
           </li>
           <li>
-            <a href="https://www.facebook.com/teaspoonsanfrancisco/">Watercolor paintings installation</a>
-						<br>
-          	<span class="metaText">Teaspoon, San Francisco, CA. Now.</span>
+            <a href="https://www.facebook.com/teaspoonsanfrancisco/">Art on display at Teaspoon SF</a> &mdash;
+              San Francisco, CA. <span class="typeNums">Now</span>
           </li>
           <li>
-            <a href="http://www.behindthemuseumcafe.com/gallery.html">Watercolor Trees: Solo Show</a>
-						<br>
-          	<span class="metaText">Behind the Museum Cafe, Portland, OR. 3/1/16-4/30/16.</span>
+            <a href="http://www.behindthemuseumcafe.com/gallery.html">Show at Behind the Museum Cafe</a> &mdash;
+              Portland, OR. <span class="typeNums">3/1/16-4/30/16</span>
           </li>
           <li>
-            <a href="https://www.facebook.com/events/1580301958953195/?active_tab=posts">Art Night: Group Show</a>
-						<br>
-						<span class="metaText">Coffee Shop, Walnut Creek, CA. 4/7/16.</span>
+            <a href="https://www.facebook.com/events/1580301958953195/?active_tab=posts">Group Show at Coffee Shop</a> &mdash; Walnut Creek, CA. <span class="typeNums">4/7/16</span>
           </li>
           <li>
-            <a href="http://www.alternativepressexpo.com/">Table Booth</a>
-						<br>
-						<span class="metaText">Alternative Press Expo, San Jose, CA. 10/3/15-10/4/15.</span>
+            <a href="http://www.alternativepressexpo.com/">Booth at Alternative Press Expo</a> &mdash; San Jose, CA. <span class="typeNums">10/3/15-10/4/15</span>
           </li>
         </ul>
       </p>
@@ -153,7 +146,7 @@
 
       <p>
 				Elsewhere on the internet: <br>
-				<a href="http://sketch.bysusanlin.com/tagged/writing">Blog</a> |
+				<a href="http://sketch.bysusanlin.com">Blog</a> |
 				<a href="http://instagram.com/susanl">Instagram</a> |
 				<a href="http://twitter.com/bysusanlin">Twitter</a> |
 				<a href="http://pinterest.com/susanl/pins">Pinterest</a> |
@@ -191,11 +184,6 @@
 
   <p>
     See my art
-  </p>
-  <p>
-    <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">Art + Science at NASA Goddard</a>
-    <br>
-    Greenbelt, MD
   </p>
   <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
@@ -262,9 +250,9 @@
 				</li>
 			</a>
 
-			<a href="http://sketch.bysusanlin.com/tagged/writing">
+			<a href="http://sketch.bysusanlin.com">
 				<li>
-					Writing
+					Blog
 				</li>
 			</a>
 
@@ -321,8 +309,6 @@
 		<div class="clear"></div>
 
 		<div class="footnote">
-			<a href="/"><a href="/"><img src="/images/sprite-fp.png" width="27px" class="sprite"></a></a>
-			<br>
 			&copy; Susan Lin, 2003-2017.
 		</div>
 
