update instagram links

--- a/about/index.html
+++ b/about/index.html
@@ -78,11 +78,8 @@
       </p>
 
       <p>
-				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees</a> and <a href="https://www.instagram.com/explore/tags/susansmovingstudio/">made art while she traveled.</a> Most recently, she indulges in <a href="https://www.instagram.com/explore/tags/pixelsbysusan/">pixel art.</a> She believes delibrate practice is the key to a successful art practice and has shown her work in several cities.
-      </p>
-
-      <p>
-        Ask her about <a href="https://www.instagram.com/ponpon.shiba/">Ponpon</a>, her (currently) nonexistent shiba inu with instagram followers.
+				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://
+					.com/explore/tags/linwatercolorforest/">watercolor trees</a> and <a href="https://www.instagram.com/explore/tags/susansmovingstudio/">made art while she traveled.</a> Most recently, she indulges in <a href="https://www.instagram.com/explore/tags/pixelsbysusan/">pixel art.</a> She believes delibrate practice is the key to a successful art practice and has shown her work in several cities.
       </p>
 
       <br>
@@ -144,7 +141,7 @@
       <p>
 				Elsewhere on the internet: <br>
 				<a href="http://sketch.bysusanlin.com">Blog</a> |
-				<a href="http://instagram.com/susanl">Instagram</a> |
+				<a href="http://instagram.com/bysusanlin">Instagram</a> |
 				<a href="http://twitter.com/bysusanlin">Twitter</a> |
 				<a href="http://pinterest.com/susanl/pins">Pinterest</a> |
 				<a href="http://dribbble.com/bysusanlin">Dribbble</a> |
@@ -271,7 +268,7 @@
 				</li>
 			</a>
 
-      <a href="http://instagram.com/susanl">
+      <a href="http://instagram.com/bysusanlin">
         <li>
           Instagram
         </li>
