--- a/design/index.html
+++ b/design/index.html
@@ -305,7 +305,7 @@
 				</li>
 			</a>
 
-      <a href="http://instagram.com/susanl">
+      <a href="http://instagram.com/bysusanlin">
         <li>
           Instagram
         </li>
