update ig links

--- a/illustration/index.html
+++ b/illustration/index.html
@@ -66,7 +66,7 @@
 		<div class="intro">
 			<h2> Illustration </h2>
 			<p>
-		 		This is my static page letting you know that I make art! A better place to folow my art is <a href="http://instagram.com/susanl">on instagram</a> or <a href="http://twitter.com/bysusanlin">on twitter</a>. I also have <a href="http://shop.bysusanlin.com">prints available for purchase.</a> Scroll to see examples of commissions.
+		 		This is my static page letting you know that I make art! A better place to folow my art is <a href="http://instagram.com/bysusanlin">on instagram</a> or <a href="http://twitter.com/bysusanlin">on twitter</a>. I also have <a href="http://shop.bysusanlin.com">prints available for purchase.</a> Scroll to see examples of commissions.
       </p>
 		 	<p>
         Open for illustration commissions! bysusanlin at gmail.
@@ -263,7 +263,7 @@
 				</li>
 			</a>
 
-      <a href="http://instagram.com/susanl">
+      <a href="http://instagram.com/bysusanlin">
         <li>
           Instagram
         </li>
