update ig links

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 				</li>
 			</a>
 
-      <a href="http://instagram.com/susanl">
+      <a href="http://instagram.com/bysusanlin">
         <li>
           Instagram
         </li>
