--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -298,7 +298,7 @@
 				</li>
 			</a>
 
-      <a href="http://instagram.com/susanl">
+      <a href="http://instagram.com/bysusanlin">
         <li>
           Instagram
         </li>
