update ig links

--- a/talks/index.html
+++ b/talks/index.html
@@ -259,7 +259,7 @@
 				</li>
 			</a>
 
-      <a href="http://instagram.com/susanl">
+      <a href="http://instagram.com/bysusanlin">
         <li>
           Instagram
         </li>
