--- a/about/index.html
+++ b/about/index.html
@@ -140,7 +140,7 @@
 
       <p>
 				Elsewhere on the internet: <br>
-				<a href="http://sketch.bysusanlin.com">Blog</a> |
+				<a href="http://sketch.bysusanlin.com/tagged/writing">Blog</a> |
 				<a href="http://instagram.com/bysusanlin">Instagram</a> |
 				<a href="http://twitter.com/bysusanlin">Twitter</a> |
 				<a href="http://pinterest.com/susanl/pins">Pinterest</a> |
