art show update

--- a/about/index.html
+++ b/about/index.html
@@ -108,6 +108,10 @@
         Art Shows &amp; Engagements: <br>
         <ul>
           <li>
+            <a href="https://www.eventbrite.com/e/tea-flights-chill-a-4-in-1-pop-up-tickets-37513774710">Tea Flights &amp; Chill Pop-up</a> &mdash;
+              San Francisco, CA. <span class="typeNums">10/1/17</span>
+          </li>          
+	  <li>
             <a href="https://www.nasa.gov/press-release/goddard/2017/james-webb-space-telescope-art-exhibit-opens-to-public/">The James Webb Space Telescope: Art + Science at NASA Goddard</a> &mdash;
               Greenbelt, MD. <span class="typeNums">3/3/17-7/2/17</span>
           </li>
