update upcoming talks

--- a/talks/index.html
+++ b/talks/index.html
@@ -84,6 +84,15 @@
 			</p>
 
 			<p>
+				Upcoming Talks:<br>
+				<li>
+					<a href="https://alterconf.com/conferences/2017/san-francisco-ca#speakers">Now more than ever</a>
+					<br>
+					<span class="metaText">AlterConf, San Francisco, CA. December 2017.</span>
+				</li>
+			</p>
+		
+			<p>
 				Past Talks:<br>
 			<ul>
 				<li>
